<resources>
    <string name="app_name">HockeyApp Demo</string>

    <!-- Main Activity -->

    <string name="section_crash_reporting">Crash Reporting</string>
    <string name="section_update">Updates</string>
    <string name="section_feedback">Feedback</string>
    <string name="section_login">Login Manager</string>

    <string name="action_crash">Crash me</string>
    <string name="action_update">Check for Updates</string>
    <string name="action_feedback">Send Feedback</string>
    <string name="action_feedback_screenshot">Enable Screenshot for Feedback</string>
    <string name="action_login_email">Login w/ email</string>
    <string name="action_login_full">Login full</string>

    <!-- Private Activity -->
    <string name="title_activity_private">Private Activity</string>

    <string name="private_activity_subline">This is a private activity.</string>
    <string name="action_update_custom">Custom Check for Updates</string>
    <string name="no_updates_title">No Updates</string>
    <string name="no_updates_message">There are currently no updates available.</string>
    <string name="ok">OK</string>
    <string name="updates_title">Update available</string>
    <string name="updates_message">An update is available for download.</string>
    <string name="action_init_metrics">Register MetricsManager</string>
    <string name="action_disable_metrics">Disable Metrics</string>
    <string name="action_erable_metrics">Enable Metrics</string>
    <string name="section_metrics">User Metrics</string>


</resources>
