<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section_crash_reporting"
            />

        <Button
            android:id="@+id/crash_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_crash"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section_update"
            />

        <Button
            android:id="@+id/update_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_update"/>

        <Button
            android:id="@+id/button_update_custom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_update_custom"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section_feedback"
            />

        <Button
            android:id="@+id/feedback_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_feedback"
            />

        <Button
            android:id="@+id/button_feedback_screenshot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_feedback_screenshot"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section_login"
            />

        <Button
            android:id="@+id/button_login_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_login_email"
            />

        <Button
            android:id="@+id/button_login_full"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_login_full"/>

    </LinearLayout>

</ScrollView>
